# oxygine-projects

./: .gitignore  README.md
DrcSimulator/proj.android/: AndroidManifest.xml  build.sh  build.xml  install.sh  project.properties
DrcSimulator/proj.android/jni/src/: Android.mk
DrcSimulator/proj.android/res/values/: strings.xml
DrcSimulator/proj.android/src/org/oxygine/DrcSimulator/: MainActivity.java
DrcSimulator/proj.cmake/: CMakeLists.txt  run.sh
DrcSimulator/proj.emscripten/: CMakeLists.txt
DrcSimulator/proj.ios/DrcSimulator_ios.xcodeproj/: project.pbxproj
DrcSimulator/proj.macosx/DrcSimulator_macosx.xcodeproj/: project.pbxproj
DrcSimulator/proj.win32/: DrcSimulator.sln  DrcSimulator.vcxproj
